--- a/Machine Learning with K Nearest Neighbors/Machine_Learning_with_K_Nearest_Neighbors(dataset_preparation).ipynb
+++ b/Machine Learning with K Nearest Neighbors/Machine_Learning_with_K_Nearest_Neighbors(dataset_preparation).ipynb
@@ -163,7 +163,8 @@
       "source": [
         "#Converting the scaled features to a dataframe\n",
         "scaled_df = pd.DataFrame(scaled_feats)\n",
-        "scaled_df.columns =[]"
+        "scaled_df.columns =['XVPM', 'GWYH', 'TRAT', 'TLLZ', 'IGGA', 'HYKR', 'EDFS', 'GUUB', 'MGJM',
+       'JHZC']"
       ],
       "execution_count": null,
       "outputs": []
